Finished an SQL homework.

--- a/Lectures/Notes/016SQL.md
+++ b/Lectures/Notes/016SQL.md
@@ -98,6 +98,8 @@ SELECT Name, Class, Major FROM StudentScores WHERE Name IS NOT NULL ORDER BY Mat
 
 ### 2. 多表查询
 
+#### 不同表的复合
+
 - 使用 `SELECT attributes FROM A, B WHERE conditions` 会先得到A, B两个表的笛卡尔积 $A \times B$ ，然后根据conditions进行过滤，最终得到查询的属性。
 
 <!-- 当两个表格中有同名属性时，可以用chart.attribute进行区别 -->
@@ -118,5 +120,63 @@ SELECT School FROM StudentScores, Schools WHERE StudentScores.Name = Schools.Nam
 ````sql
 # 同样查询出语数外总分400及以上学生的母校。
 SELECT School FROM StudentScores JOIN Schools ON StudentScores.Name = Schools.Name WHERE Math + Chinese + English >= 400;
+````
+
+#### 同一表的复合
+
+同一个表的复合中，由于有相同的属性，__所以需要给表格一个别名__，这样才能区分不同的表格下的属性。
+
+````sql
+# 一个新的例子，关于人之间的父子关系。
+CREATE TABLE relation AS
+  SELECT "ace" AS parent, "bella" AS child UNION
+  SELECT "ace"          , "charlie"        UNION
+  SELECT "daisy"        , "hank"           UNION
+  SELECT "finn"         , "ace"            UNION
+  SELECT "finn"         , "daisy"          UNION
+  SELECT "finn"         , "ginger"         UNION
+  SELECT "ellie"        , "finn";
+
+# 创建兄弟关系，字母排序。
+CREATE TABLE siblings AS
+	SELECT a.child as first, b.child as last FROM
+	relation as a, relation as b
+	where a.parent = b.parent and a.child < b.child
+````
+
+### 3. 字符串拼接
+
+不同字符串，属性之间用 `||` 拼接在一起。
+
+````sql
+create table sentence as
+	select first || ' and ' last || 'are siblings, whose father is ' || parent
+	from siblings join relation on first = child;
+	
+# bella and charlie are siblings, whose father is ace
+# ...
+````
+
+### 4. Built-In Functions
+
+- `sum` , `avg ` , `min` , `max`
+- `round` , `ceil` , `floor` , `abs`
+
+### 5.  分组(GROUP BY)
+
+- `GROUP BY` 能够将一个表中的记录按照某个 (或者某些，可以用多个属性进行分组) 属性进行分组。
+
+````sql
+# 查询每个班级的数学平均分。
+select class, avg(Math) from StudentScores group by class;
+````
+
+- `having` 能够__对分组之后的组进行过滤。__
+
+<!-- where是对分组之前的单行记录进行过滤，having对分组之后的组进行过滤 -->
+
+````sql
+# 查询数学平均分大于等于120的班级。
+select class, avg(Math) from StudentScores group by class having avg(math) >= 120;
 ````
 
