Updated SQL Notes.

--- a/Lectures/Notes/016SQL.md
+++ b/Lectures/Notes/016SQL.md
@@ -1,18 +1,13 @@
 # SQL
 
-- 数据定义：`CREATE` , `DROP` , `ALTER` .
-- 数据查询：`SELECT` .
-- 数据更新：`INSERT` , `UPDATE` , `DELETE` .
-- 数据控制：`GRANT` ,  `REVOKE` .
-
 ## 数据定义
 
 ### 1. 表格的定义
 
-- 使用 `CREATE TABLE ... (...);` 创建一个表格。
+- 使用 `CREATE TABLE ... (...);` 创建一个表格，或者严谨一点 `CREATE TABLE IF NOT EXISTS ... (...);` 防止重复定义一个表格。
 - 括号中的内容是表格的属性，每个属性都有名字、类型、约束条件。
 
-<!-- PRIMARY KEY表示该值在值域内独一无二，NOT NULL表示不能为空 -->
+<!-- PRIMARY KEY表示该值是主键，unique表示在值域内唯一，NOT NULL表示不能为空，default表示在插入数据时若该值为空，则初始化为默认值 -->
 
 ````sql
 CREATE TABLE StudentScores(
@@ -37,7 +32,7 @@ CREATE TABLE StudentScores AS
 
 ### 2. 表格的删除
 
-- 使用 `DROP TABLE` 对表格进行删除。
+- 使用 `DROP TABLE ...` 对表格进行删除，或者严谨一点 `DROP TABLE IF EXISTS ...` 。
 
 ````sql
 DROP TABLE StudentScores;
@@ -178,4 +173,61 @@ select class, avg(Math) from StudentScores group by class;
 ````sql
 # 查询数学平均分大于等于120的班级。
 select class, avg(Math) from StudentScores group by class having avg(math) >= 120;
+````
+
+## 数据更新
+
+### 1. INSERT
+
+`INSERT` 用于对表格插入一组记录，完整用法：`INSERT INTO ... VALUES (...) (...) ...;` 
+
+````sql
+create table student(
+	id int primary key,
+ 	name char(20) unique,
+  status char(20 ) default 'ordinary',
+  age int not null
+);
+
+insert into student values (1, 'Alex') (2, 'Bob');
+````
+
+### 2. UPDATE
+
+`UPDATE` 用于对特定的记录（行）进行修改，更新它们的值。完整用法：`UPDATE ... SET ... WHERE ...;`
+
+````sql
+# 将年龄大于15的学生的身份改为成员。
+update student set status='member' where age > 15;
+````
+
+### 3. DELETE
+
+`DELETE` 可以对一个表中特定的记录进行删除，具体用法：`DELETE FROM ... WHERE ...;` 删除某些特定条件的记录。如果 `DELETE FROM ...;` 则删除这个表中所有的记录，但是表格并没有被删除。
+
+## Python & SQL
+
+sqlite3是Python解释器自带的数据库管理系统 (DBMS) ，可以用sqlite3直接在Python中运行SQL语句。
+
+````python
+import sqlite3
+
+# 与数据库进行连接
+conn = sqlite3.connect('path/to/your/db.db')
+
+# 创建光标，在光标中可以执行sql语句
+c = conn.cursor()
+
+c.execute('create table if not exists numbers as select 1 union 2 union 3;')
+c.execute('insert into numbers values (4) (5) (6)')
+# 另外一种insert方式，更符合Python语言的特性
+c.execute('insert into numbers values (?) (?) (?);', range(7, 10))
+
+# 在进行数据查询时，使用fetchall方法可以得到以[(), (), ...]列表中元组形式的查询结果，每个元组就是一组记录。
+records = c.execute('select * from student;').fetchall()
+
+# 对数据库进行修改之后，需要进行commit，确认提交修改，就像git一样
+conn.commit() 
+# 使用完成后必须关闭与数据库的连接
+conn.close()
 ````
