Finished all of CS61A, congratulations to myself.^_^

--- a/Lectures/Notes/016SQL.md
+++ b/Lectures/Notes/016SQL.md
@@ -1,5 +1,12 @@
 # SQL
 
+## 目录
+
+- 数据定义：`CREATE TABLE` , `DROP TABLE` , `ALTER TABLE`
+- 数据查询：`SELECT` , `SELECT AS` , `WHERE` , `ORDER BY` , `GROUP BY` , `HAVING` , `WITH`
+- 数据更新：`INSERT INTO` , `UPDATE` , `DELETE`
+- Python & SQL：Sqlite3, a built-in library to Python.
+
 ## 数据定义
 
 ### 1. 表格的定义
@@ -54,7 +61,7 @@ ALTER TABLE StudentScores ALTER ID CHAR(18) PRIMARY KEY;
 
 ### 1. 单表查询
 
-- 可以用 `SELECT` 直接从表格中选取某些属性。
+- 可以用 `SELECT ...` 直接从表格中选取某些属性，或者 `SELECT *` 全选属性。
 
 ````sql
 SELECT Name, Math, Chinese, English FROM StudentScores;
@@ -100,20 +107,20 @@ SELECT Name, Class, Major FROM StudentScores WHERE Name IS NOT NULL ORDER BY Mat
 <!-- 当两个表格中有同名属性时，可以用chart.attribute进行区别 -->
 
 ````sql
-# 创建一个学生的母校的表格。
+-- 创建一个学生的母校的表格。
 CREATE TABLE Schools(
 	Name CHAR(20) PRIMARY KEY,
   School CHAR(20) NOT NULL
 );
 
-# 查询出语数外总分400及以上学生的母校。
+-- 查询出语数外总分400及以上学生的母校。
 SELECT School FROM StudentScores, Schools WHERE StudentScores.Name = Schools.Name AND Math + Chinese + English >= 400;
 ````
 
 - 也可以使用 `A JOIN B ON conditions1 WHERE conditions2` 进行多表查询，`ON` 定义了A, B表进行连接的条件，`WHERE` 是在连接之后的表上进行筛选。
 
 ````sql
-# 同样查询出语数外总分400及以上学生的母校。
+-- 同样查询出语数外总分400及以上学生的母校。
 SELECT School FROM StudentScores JOIN Schools ON StudentScores.Name = Schools.Name WHERE Math + Chinese + English >= 400;
 ````
 
@@ -122,7 +129,7 @@ SELECT School FROM StudentScores JOIN Schools ON StudentScores.Name = Schools.Na
 同一个表的复合中，由于有相同的属性，__所以需要给表格一个别名__，这样才能区分不同的表格下的属性。
 
 ````sql
-# 一个新的例子，关于人之间的父子关系。
+-- 一个新的例子，关于人之间的父子关系。
 CREATE TABLE relation AS
   SELECT "ace" AS parent, "bella" AS child UNION
   SELECT "ace"          , "charlie"        UNION
@@ -132,24 +139,63 @@ CREATE TABLE relation AS
   SELECT "finn"         , "ginger"         UNION
   SELECT "ellie"        , "finn";
 
-# 创建兄弟关系，字母排序。
+-- 创建兄弟关系，字母排序。
 CREATE TABLE siblings AS
 	SELECT a.child as first, b.child as last FROM
 	relation as a, relation as b
 	where a.parent = b.parent and a.child < b.child
 ````
 
+#### WITH
+
+`WITH ... AS ...;` 可以用于在一次查询中，临时创建一个子查询。
+
+````sql
+CREATE TABLE finals AS
+  SELECT "RSF" AS hall, "61A" as course UNION
+  SELECT "Wheeler"    , "61A"           UNION
+  SELECT "Pimentel"   , "61A"           UNION
+  SELECT "Li Ka Shing", "61A"           UNION
+  SELECT "Stanley"    , "61A"           UNION
+  SELECT "RSF"        , "61B"           UNION
+  SELECT "Wheeler"    , "61B"           UNION
+  SELECT "Morgan"     , "61B"           UNION
+  SELECT "Wheeler"    , "61C"           UNION
+  SELECT "Pimentel"   , "61C"           UNION
+  SELECT "Soda 310"   , "61C"           UNION
+  SELECT "Soda 306"   , "10"            UNION
+  SELECT "RSF"        , "70";
+
+-- 查询每个课程的公共考试教室数量（和其余课程共享的教室）
+create table sharing AS
+	-- 创建一个临时表格remove_exclusive，移除专属的教室
+	with remove_exclusive as (
+    select hall from finals
+    group by hall having count(*) > 1
+  )
+  -- 从remove_exclusive中计算公共教室
+  select course, count(*) as shared from
+  finals where hall in (select hall from remove_exclusive)    
+  group by course;
+````
+
 ### 3. 字符串拼接
 
-不同字符串，属性之间用 `||` 拼接在一起。
+- 不同字符串，属性之间用 `||` 拼接在一起。
 
 ````sql
 create table sentence as
 	select first || ' and ' last || 'are siblings, whose father is ' || parent
 	from siblings join relation on first = child;
 	
-# bella and charlie are siblings, whose father is ace
-# ...
+-- bella and charlie are siblings, whose father is ace
+-- ...
+````
+
+- 在字符串拼接中如果要进行数学运算，那么__必须用括号将表达式括起来__。
+
+````sql
+select 'This is ' || (1 + 3) || ' number.';
 ````
 
 ### 4. Built-In Functions
@@ -159,19 +205,21 @@ create table sentence as
 
 ### 5.  分组(GROUP BY)
 
-- `GROUP BY` 能够将一个表中的记录按照某个 (或者某些，可以用多个属性进行分组) 属性进行分组。
+- `GROUP BY` 能够将一个表中的记录按照某个 (或者某些，可以用多个属性进行分组) 属性进行分组，__分为同一组的数据会被压缩成一行__。
 
 ````sql
-# 查询每个班级的数学平均分。
+-- 查询每个班级的数学平均分。
 select class, avg(Math) from StudentScores group by class;
+
+-- group by class之后，同一个班级的数据会全部被压缩成同一行，同一个属性中的数据被放在同一个数据项中。
 ````
 
-- `having` 能够__对分组之后的组进行过滤。__
+- `having` 能够__对分组之后的组进行过滤__。
 
 <!-- where是对分组之前的单行记录进行过滤，having对分组之后的组进行过滤 -->
 
 ````sql
-# 查询数学平均分大于等于120的班级。
+-- 查询数学平均分大于等于120的班级。
 select class, avg(Math) from StudentScores group by class having avg(math) >= 120;
 ````
 
@@ -197,7 +245,7 @@ insert into student values (1, 'Alex') (2, 'Bob');
 `UPDATE` 用于对特定的记录（行）进行修改，更新它们的值。完整用法：`UPDATE ... SET ... WHERE ...;`
 
 ````sql
-# 将年龄大于15的学生的身份改为成员。
+-- 将年龄大于15的学生的身份改为成员。
 update student set status='member' where age > 15;
 ````
 
@@ -231,3 +279,4 @@ conn.commit()
 # 使用完成后必须关闭与数据库的连接
 conn.close()
 ````
+
